# spim_medaka_zebrafish_trajectory

./: .gitignore  README.md  density_analysis.R  embryo_viewer.py  gastrulation_dynamics_comparison.R  gastrulation_dynamics_medaka.R  gastrulation_dynamics_methods.tex  gastrulation_dynamics_zebrafish.R  medaka_density_analysis.R  nuclear_stats.py  oneshot_comparison.R  orientation_interactive.R  pyproject.toml  requirements.txt  trackmate_analysis.R  trackmate_filter_and_validate.R  ultrack.def  ultrack_viewer.py  zebrafish_density_analysis.R
archive/: manual_tracking_analysis.R  trackmate_analysis_v1.R  trackmate_analysis_v2.R  trackmate_filter_optimization.R  trackmate_vs_imaris_comparison.R  trackmate_xlsx_analysis.R
