[project]
name = "spim-medaka-zebrafish-trajectory"
version = "0.1.0"
description = "Comparative 4D lightsheet whole-embryo nuclei tracking — medaka vs zebrafish gastrulation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "napari[pyqt6]>=0.5",
    "magicgui>=0.8",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.8",
]

[project.scripts]
embryo-viewer = "embryo_viewer:main"
